--- a/wiki/MiniCodeColumnOptions.wiki
+++ b/wiki/MiniCodeColumnOptions.wiki
@@ -4,4 +4,4 @@
 [http://dxcorecommunityplugins.googlecode.com/svn/trunk/MiniCodeColumn/Documents/OptionPageScreenShot.png]
 
 === Plugin ===
-[http://dxcorecommunityplugins.googlecode.com/svn/trunk/MiniCodeColumn back]
+[http://code.google.com/p/dxcorecommunityplugins/wiki/MiniCodeColumn back]
