Edited wiki page through web user interface.

--- a/wiki/DrawLinesBetweenMethods.wiki
+++ b/wiki/DrawLinesBetweenMethods.wiki
@@ -1,24 +1,22 @@
-#summary Draws a line between method declarations.
+#summary Draws a line between method, enum, and class declarations.
 #labels Phase-Support
 
 = Introduction =
+The VB.NET editor provides a line separator between methods but the C# editor does not. This plugin provides a similar line separation functionality with some additional flexibility for line format. It also now allows you to specify lines between enum and classes.
 
-The VB.NET editor provides a line separator between methods but the C# editor does not. This plugin provides a similar line separation functionality with some additional flexibility for line format.
+Example:
 
-Blog article: http://blog.dotsmart.net/2008/05/02/lines-between-methods-in-the-c-editor-coderushdxcore-plugin/
+http://dotsmart.files.wordpress.com/2007/12/draw_lines_between_methods_-_in_action.png
+
+(Blog article: http://blog.dotsmart.net/2008/05/02/lines-between-methods-in-the-c-editor-coderushdxcore-plugin/)
 
 = Installation =
-
 Installation instructions can be found on the InstallInstructions page.
 
-= Usage =
-
-TODO
-
 = Options =
+The options page allows you to change the line color, shadow, etc.
 
-TODO
+http://dotsmart.files.wordpress.com/2007/12/draw_lines_between_methods_-_settings.png
 
 = Credits =
-
-Author: Duncan Smart
+Author: [http://blog.dotsmart.net/ Duncan Smart], with updates from Ben Alabaster.
