--- a/wiki/MiniCodeColumn.wiki
+++ b/wiki/MiniCodeColumn.wiki
@@ -49,8 +49,10 @@ So this got again my favorite sticker :
 [http://www.hanselman.com/blog/content/binary/WindowsLiveWriter/IntroducingRockScroll_C29C/works-on-my-machine-starburst_3.png]
 </td></tr></table>
 
+I recently set up a [http://code-seeker.blogspot.com/2009/05/minicodecolumn.html personal blog]. See you there :-)
+
 === Call for Comments ===
 
-If you like it - or not - please drop a comment :-)
+If you like it - or not - please drop a comment.
 
 If you find some serious errors , please use the [http://code.google.com/p/dxcorecommunityplugins/issues/list issues tab].
