--- a/wiki/InstallInstructions.wiki
+++ b/wiki/InstallInstructions.wiki
@@ -5,8 +5,10 @@
 To install any of these plugins, download the relevant binary (DownloadInstructions) and then...
 
   # Shut down all instances of Visual Studio.
-  # Place the downloaded plugin(s) into your DXCore plugin folder. This is typically something like: `C:\Program Files\Developer Express Inc\DXCore for Visual Studio .NET\2.0\Bin\Plugins`. (For DXCore 9.1 and higher, this path is more like `C:\Program Files\DevExpress 2009.1\IDETools\Community\Plugins\`)
-  # Start Visual Studio. The plugin(s) are now installed.
+  # Place the downloaded plugin(s) into your DXCore plugin folder. 
+    # For DXCore 9.1.1, this path is similar to like `C:\Program Files\DevExpress 2009.1\IDETools\Community\Plugins\`)
+    # 9.1.3 or higher its more like "My docs\DevExpress\IDE Tools\Community\PlugIns"
+  # Restart Visual Studio. The plugin(s) are now installed.
 
 =Usage=
 Each plugin has its own usage instructions. See the [http://code.google.com/p/dxcorecommunityplugins/w/list wiki] for more on each individual plugin.
