--- a/wiki/InstallInstructions.wiki
+++ b/wiki/InstallInstructions.wiki
@@ -6,8 +6,8 @@ To install any of these plugins, download the relevant binary (DownloadInstructi
 
   # Shut down all instances of Visual Studio.
   # Place the downloaded plugin(s) into your DXCore plugin folder. 
-    # For DXCore 9.1.1, this path is similar to like `C:\Program Files\DevExpress 2009.1\IDETools\Community\Plugins\`)
-    # 9.1.3 or higher its more like "My docs\DevExpress\IDE Tools\Community\PlugIns"
+    * For DXCore 9.1.1, this path is similar to like `C:\Program Files\DevExpress 2009.1\IDETools\Community\Plugins\`)
+    * For DXCore 9.1.3 or higher its more like `My docs\DevExpress\IDE Tools\Community\PlugIns`
   # Restart Visual Studio. The plugin(s) are now installed.
 
 =Usage=
