--- a/wiki/CR_LinkBar.wiki
+++ b/wiki/CR_LinkBar.wiki
@@ -1,8 +1,9 @@
-#summary Favourites bar for groups of files within your solution.
+#summary Favorites bar for different arrangements of files (workspaces) in your solution.
 
 = Introduction =
 
 This plugin is for allowing you to save references to clusters of files so that you can reload a cluster of these files at will at a moments notice.
+
 
 http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_LinkBar/Screenshots/Screenshot1.png
 
@@ -11,20 +12,20 @@ http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_LinkBar/Screenshots/Sc
 = Scenario =
 
 So you're happily working away on some subsystem of "The Solution", when your boss rings up and interrupts you once again.
-
 He want's to know some intricate detail about some other subsystem of "The Solution"
-
 You don't have the information to hand... You're going to have to delve deep and open up a few files which are going to corrupt your workspace with their mere presence.
 
-Never fear... Use CR_LinkBar to create a new "group button" and call it "MyWork" and then "Save & Close All"
+Never fear... Use CR_LinkBar to save a new "Workspace" and call it "MyWork" and then "Save and Close All"
 
 Open up whatever you need for dealing with your boss, and answer his questions.
-
 Once done, close everything and hit the "MyWork" button....
 Your files are restored and you can continue working on what you were before.
 
+= Download = 
+The download is [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_LinkBar/ available from here]
+
 = Specifics = 
-Groups are saved in normal DXCore Settings, but are specific to the given solution.
+Workspaces are saved in normal DXCore Settings, but are specific to the given solution.
 
 
 = Limitations = 
@@ -32,5 +33,3 @@ Groups are saved in normal DXCore Settings, but are specific to the given soluti
   * Many things are available when they should not be... This is a very early access plugin :P 
   * The UI is not very flexible.
   * You are never asked if you are sure.... Be careful.
-
-Oh yeah and the Download is [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_LinkBar/ here]
