--- a/wiki/PluginResources.wiki
+++ b/wiki/PluginResources.wiki
@@ -40,6 +40,8 @@ Navigate to Implementation
  * [http://blogs.microsoft.co.il/blogs/kim/archive/2008/10/19/coderush-plugin-navigate-to-implementation-part-4.aspx Part 4]
 
 Mark Miller - [http://community.devexpress.com/blogs/markmiller/ Blog]
+
+ * [http://community.devexpress.com/blogs/markmiller/archive/2009/07/23/code-providers-101-implementing-unimplemented-properties.aspx Code Providers 101 -- Implementing Unimplemented Properties]
  * [http://community.devexpress.com/blogs/markmiller/archive/2008/12/02/new-coderush-plug-in-jump-to-implementer.aspx Jump to Implementer plugin]
 
 Clipboard History (Source Included with CodeRush)
