Edited wiki page through web user interface.

--- a/wiki/PluginResources.wiki
+++ b/wiki/PluginResources.wiki
@@ -29,9 +29,10 @@ The best place to ask any questions is in the [http://community.devexpress.com/f
 
 = End to End - Plugin Tutorials =
 
-Kevin Wolf 
+=== Kevin Wolf ===
  * [http://new.efficientcoder.net/2008/11/custom-string-to-resource-refactoring.html Custom String to Resource Refactoring with DXCore]
-Kim Major - [http://blogs.microsoft.co.il/blogs/kim/ Blog]
+=== Kim Major  ===
+[http://blogs.microsoft.co.il/blogs/kim/ Kim's Blog]
 
 Navigate to Implementation
  * [http://blogs.microsoft.co.il/blogs/kim/archive/2008/10/19/coderush-plugin-navigate-to-implementation-part-1.aspx Part 1]
@@ -39,7 +40,8 @@ Navigate to Implementation
  * [http://blogs.microsoft.co.il/blogs/kim/archive/2008/10/19/coderush-plugin-navigate-to-implementation-part-3.aspx Part 3]
  * [http://blogs.microsoft.co.il/blogs/kim/archive/2008/10/19/coderush-plugin-navigate-to-implementation-part-4.aspx Part 4]
 
-Mark Miller - [http://community.devexpress.com/blogs/markmiller/ Blog]
+=== Mark Miller ===
+[http://community.devexpress.com/blogs/markmiller/ Mark's Blog]
 
  * [http://community.devexpress.com/blogs/markmiller/archive/2009/07/23/code-providers-101-implementing-unimplemented-properties.aspx Code Providers 101 -- Implementing Unimplemented Properties]
  * [http://community.devexpress.com/blogs/markmiller/archive/2008/12/02/new-coderush-plug-in-jump-to-implementer.aspx Jump to Implementer plugin]
