--- a/wiki/CR_MethodShader.wiki
+++ b/wiki/CR_MethodShader.wiki
@@ -4,7 +4,7 @@
 
 This plugin changes the bckground color of your classes members to indicate how well they adhere to a nominated metric.
 
-So good methods remain white. and the colors escalate Green, Orange, Red as the Metric value goes up.
+So good members remain white and the colors escalate Green, Orange, Red as the Metric value goes up.
 
 http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_MetricShader/Screenshots/Example.png
 
