--- a/wiki/CR_MethodShader.wiki
+++ b/wiki/CR_MethodShader.wiki
@@ -4,19 +4,19 @@
 
 Disclaimer: There has been zero performance testing on this plugin :)
 
-This plugin changes the bckground color of your classes members to indicate how well they adhere to a nominated metric.
+This plugin changes the background color of your class's members to indicate how well they adhere to a nominated metric.
 
-So good members remain white and the colors escalate Green, Orange, Red as the Metric value goes up.
+So members that stack up well remain white, and the colors escalate Green, Orange, Red as the Metric value goes up.
 
 http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_MetricShader/Screenshots/Example.png
 
-Each metric has a numeric value which is said to be the Warning value.
+Each metric has a numeric value which is said to be the Warning Value.
  * 0-25% = White.
  * 25-50% = Green.
  * 50-75% = Orange.
  * 75%+ = Red.
 
-In the screenshot above I am using a Demo Metric which counts the number of lines in the member and has the Warning value set to 15. This is a useless metric created (within this plugin) purely for the purposes of being able to create this screenshot.
+In the screenshot above I am using a Demo Metric which counts the number of lines in the member and has the Warning Value set to 15. This is a useless metric created (within this plugin) purely for the purposes of being able to create this screenshot.
 
 The options screen allows you to pick from any Metric (that does its calcs on members) within CodeRush and displays it's Warning value alongside the dropdown.
 
