--- a/wiki/CR_MetricShader.wiki
+++ b/wiki/CR_MetricShader.wiki
@@ -23,7 +23,7 @@ Additionally you can change any of the colors, opacities of those colors or the 
 
 You can also enable/disable the plugin entirely.
 
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_MetricShader/Screenshots/Options556.png
+http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_MetricShader/Screenshots/Options563.png
 
 === Installation ===
 
@@ -39,6 +39,8 @@ Primary download is http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_
  * Pick your metric and GO.
 
 === History ===
+ * Build 563
+   * Now allows an alternate mode where a single nominated color is used with different levels of opacity to indicate poorness of metric compliance.
  * Build 556
    * Color, Opacity and Boundary Percentages now customizable.
  * Build 553
