Edited wiki page through web user interface.

--- a/wiki/CR_SettingsMonitor.wiki
+++ b/wiki/CR_SettingsMonitor.wiki
@@ -1,4 +1,4 @@
-#summary Template to reload settings when then are changed, by an external agent.
+#summary Plugin to reload settings when then are changed, by an external agent.
 
 === Introduction ===
 
