--- a/wiki/CR_SmartQuotes.wiki
+++ b/wiki/CR_SmartQuotes.wiki
@@ -23,9 +23,10 @@ SmartQuotes is fully configurable. Options page can be found in "Editor/Auto Com
 
 = Future work =
 
-Better support for verbatim strings.
+  * Better support for verbatim strings.
+  * Integration with CodeRush Feature UI
 
 = Known Issues =
 
-There is problem with clearing text fields from local cache. 
+There is problem (very minor, but still) with clearing text fields from local cache. 
 This will be fixed after DevExpress implement http://www.devexpress.com/Support/Center/p/Q218515.aspx?searchtext=&p=T4|P6|0 suggestion
