--- a/wiki/CR_SmartGenerics.wiki
+++ b/wiki/CR_SmartGenerics.wiki
@@ -9,9 +9,9 @@ This plugin works only for c#.
 This plugin brings auto complete of generics operators in c# to CodeRush. Features are based on auto complete of parens and brackets, which are supported out of the box:
   * Auto complete of single and double quotes
   * Support for text fields
-  * Adding spaces inside <>
-  * Easy delete of empty single and double quotes
-  * Ignoring of closing single and double quotes while typing
+  * Adding spaces inside < and > (< | >)
+  * Easy delete of empty <>
+  * Ignoring of closing > while typing
 
 
 I did my best to detect whether < was typed as part of generics or as "lower than" operator.
